Fix spacing for smaller windows

--- a/styling.css
+++ b/styling.css
@@ -1,8 +1,6 @@
 body {
     width: 1280px;
     align-items: center;
-    margin-left: 640px;
-    margin-right: 640px;
 
     padding: 20px;
     
@@ -13,6 +11,10 @@ body {
     color:darkslateblue;
     font-weight: bold;
     text-align: center;
+}
+
+.title {
+    color:darkslateblue;
 }
 
 .paragraph {
